added a footer and a button on descripton

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Navigaton bar code-->
     <div id="navigation-bar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">MaTCh iT!!</a>
+        <a class="navbar-brand" href="#">WESHY!!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,10 +26,18 @@
     </div>
 
     <!--Description Code-->
-    <div class="decription">
+    <div class="description">
         <p>In this application you'll be able to get your <em>AKAN NAME</em> which is calculated from the day of the week you were born. </br> 
-            Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names.
+            Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.
         </p>
+        <button type="button" class="btn btn-secondary">Let's get Started</button>
+    </div>
+
+    <!--Footer Code-->
+    <div>
+        <div class="footer">© 2020 Copyright:
+            <a href="https://instagram.com/___w.e.s.h.y"> Weshy X Designs</a>
+          </div>
     </div>
 </body>
 </html>
