--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Navigaton bar code-->
     <div id="navigation-bar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">WESHY!!</a>
+        <a class="navbar-brand" href="#">Wowzi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,17 +27,52 @@
 
     <!--Description Code-->
     <div class="description">
-        <p>In this application you'll be able to get your <em>AKAN NAME</em> which is calculated from the day of the week you were born. </br> 
-            Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.
-        </p>
-        <button type="button" class="btn btn-secondary">Let's get Started</button>
+        <div>
+          <p>In this application you'll be able to get your <em>AKAN NAME</em> which is calculated from the day of the week you were born. </br> 
+              Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </br> </br>
+              Let's get Started... </br>
+              Please fill the form below
+          </p>
+        </div>
+
+      <div class="form">
+        <form>
+          <div class="form-row">
+            <div class="col">
+              <input type="number" class="form-control" placeholder="Day"> 
+            </div> 
+            <div class="col">
+              <input type="number" class="form-control" placeholder="Month">
+            </div>
+            <div class="col">
+              <input type="number" class="form-control" placeholder="Century eg. 19">
+            </div>
+            <div class="col">
+              <input type="number" class="form-control" placeholder="Year">
+            </div>
+            <div>
+              <input type="radio" id="male" name="gender" value="male">
+              <label for="male">Male</label>
+              <input type="radio" id="female" name="gender" value="female">
+              <label for="female">Female</label>
+          </div>
+        </div>
+        </form>
+
+        <div class="col-auto">
+          <button type="submit" class="btn btn-primary mb-2">Submit</button>
+        </div>
+      </div>
     </div>
 
     <!--Footer Code-->
     <div>
         <div class="footer">© 2020 Copyright:
-            <a href="https://instagram.com/___w.e.s.h.y"> Weshy X Designs</a>
-          </div>
+          <a href="https://instagram.com/___w.e.s.h.y"> Weshy X Designs</a>
+        </div>
     </div>
+
+    <script> </script>
+
 </body>
 </html>
