correct JS path

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           ©2020 Copyright: <a href="https://instagram.com/___w.e.s.h.y">Weshy X Design</a>
         </div>
 
-    <script src="/script.js"> </script>
+    <script src="script.js"> </script>
 
 </body>
 </html>
