--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">Our Feature</a>
-            <a class="nav-item nav-link" href="">About</a>
+            <a class="nav-item nav-link" href="#">About</a>
           </div>
         </div>
     </nav>
