--- a/index.html
+++ b/index.html
@@ -30,50 +30,42 @@
     <div class="description">
         <div>
           <p>In this application you'll be able to get your <em>AKAN NAME</em> which is calculated from the day of the week you were born. </br> 
-              Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </br> </br>
+              Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </br>
+              Most Ghanaians have at least one name from this system, even if they also have an Arabic or western name. Notable figures with day names include Ghana's first president Kwame Nkrumah and former United Nations Secretary General Kofi Annan.</br> </br>
               Let's get Started... </br>
               Please fill the form below
           </p>
         </div>
-        <div class="formfill">
-          <div class="card" style="width: 20rem; height: 27rem; align-items: flex-start; background-color: rgb(56, 147, 175);">
-            <form class="">
-              <div class="form-group">
-                <div class="form-check form-check-input">
-                  <div class="form-check">
-                    <label for=""> Day</label>
-                      <input class="form-control" type="number" id="day" value="DD" max="31" min="01" placeholder="Date" required>
-                  </div>
-                  <div class="form-check">
-                    <label for="">Month</label>
-                      <input class="form-control" type="number" id="month" value="MM" max="12" min="01" placeholder="Month" required>
-                  </div>
-                  <div class="form-check">
-                    <label for="">Century</label>
-                      <input class="form-control" type="number" id="century" value="CC"
-                        placeholder="First two numbers" min="19" max="20" required>
-                  </div>
-                  <div class="form-check">
-                    <label for="">Year</label>
-                      <input class="form-control" type="number" id="year" value="YY" placeholder="Last two numbers"
-                        size="2" min="00"  required>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleFormControlSelect1">Gender</label>
-                      <select class="form-control" id="gender" required style="width: 150px;">
-                        <option value=""></option>
-                        <option value="Male">Male</option>
-                        <option value="Female">Female</option>
-                      </select> <br>
-                      <button onclick="akan()" type="submit" class="btn btn-success ">Submit</button>
-                      <button type="reset" class="btn btn-secondary" style=" float:right;">Reset</button>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-    </div>
+
+    <form>
+      <div class="form-group">
+        <label for="">Day</label>
+        <input type="number" class="form-control" id="day" value="dd" placeholder="Date" max="31" min="01">
+      </div>
+      <div class="form-group">
+        <label for="">Month</label>
+        <input type="number" class="form-control" id="month" placeholder="Month" value="mm" max="12" min="01">
+      </div>
+      <div class="form-group">
+        <label for="">Century</label>
+        <input type="number" class="form-control" id="century" placeholder="First two numbers">
+      </div>
+      <div class="form-group">
+        <label for="">Year</label>
+        <input type="number" class="form-control" id="year" placeholder="Last two numbers" max="99" min="01">
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Gender</label>
+          <select class="form-control" id="gender">
+            <option value=""></option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+          </select>
+          <button onclick="akan()" type="submit" class="btn btn-success">Submit</button>
+          <button type="reset" class="btn btn-secondary" >Reset</button>
+      </div>
+
+    </form>
 
     <!--Footer Code-->
         <div class="footer">
