--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <div class="form-group">
         <label for="">Gender</label>
           <select class="form-control" id="gender">
+            <option value=""></option>
             <option value="Male">Male</option>
             <option value="Female">Female</option>
           </select> </br>
