--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Navigaton bar code-->
     <div id="navigation-bar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="">Match-Dates</a>
+        <a class="navbar-brand" href="">Ankan-Generator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,11 +48,11 @@
       </div>
       <div class="form-group">
         <label for="">Century</label>
-        <input type="number" class="form-control" id="century" placeholder="First two numbers" min="19" max="20">
+        <input type="number" class="form-control" id="century" placeholder="First two numbers" >
       </div>
       <div class="form-group">
         <label for="">Year</label>
-        <input type="number" class="form-control" id="year" placeholder="Last two numbers" max="99" min="01">
+        <input type="number" class="form-control" id="year" placeholder="Last two numbers" max="99">
       </div>
       <div class="form-group">
         <label for="">Gender</label>
@@ -61,10 +61,11 @@
             <option value="Male">Male</option>
             <option value="Female">Female</option>
           </select> </br>
-          <button onclick="akan()" type="submit" class="btn btn-success">Submit</button>
+          <button onclick="akanGen()" type="submit" class="btn btn-success">Submit</button>
           <button type="reset" class="btn btn-secondary" >Reset</button>
       </div>
     </form>
+    </div>
 
     <!--Footer Code-->
         <div class="footer">
